--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,10 @@
     <groupId>me.noitcereon</groupId>
     <artifactId>noits-random-thing-picker</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <inceptionYear>2022</inceptionYear>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <log4j-version>2.19.0</log4j-version>
