--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,33 @@
         <maven.compiler.target>17</maven.compiler.target>
         <log4j-version>2.20.0</log4j-version>
     </properties>
+    <build>
+        <plugins>
+            <!-- Apache Maven Plugins -->
+            <plugin>
+                <!-- Plugin website: https://maven.apache.org/plugins/maven-shade-plugin/ -->
+                <!-- The Maven Shade Plugin compiles a runnable jar with dependencies during the mvn package step, so the application can be run with 'java -jar <name-of-jar-file> -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.4.1</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>me.noitcereon.Main</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
