--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.noitcereon</groupId>
     <artifactId>noits-random-thing-picker</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.1+2023</version>
     <inceptionYear>2022</inceptionYear>
 
     <properties>
